<resources>
    <string name="app_name">FDPApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="exibirmensagem">Exibir Mensagem</string>
    <string name="somar">+</string>
    <string name="subtrair">-</string>
    <string name="multiplicar">*</string>
    <string name="dividir">/</string>
    <string name="resultado">Resultado</string>
    <string name="fechar">Fechar</string>
    <string name="nome">Nome:</string>
    <string name="banana">Banana</string>
    <string name="salvar">Salvar</string>
    <string name="id">ID</string>
    <string name="maca">Maçã</string>
    <string name="Novo">Novo</string>
</resources>
