<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/ed1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        />

    <EditText android:layout_below="@id/ed1"
        android:id="@+id/ed2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        />

    <Button
        android:id="@+id/btSomar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ed2"
        android:text="@string/somar" />


    <Button
        android:layout_toRightOf="@id/btSomar"
        android:id="@+id/btSubtrair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ed2"
        android:text="@string/subtrair" />

    <Button
        android:layout_toRightOf="@id/btSubtrair"
        android:id="@+id/btMultiplicar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ed2"
        android:text="@string/multiplicar" />


    <Button
        android:layout_toRightOf="@id/btMultiplicar"
        android:id="@+id/btDividir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ed2"
        android:text="@string/dividir" />


</RelativeLayout>
